# optevolver

./: LICENSE  Makefile  README.md  how to build a wheel.txt  optevolver.html  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  Pydoc_ package optevolver.html  conf.py  index.rst  make.bat
examples/: EO_example.py  TF2_opt_example.py  defaultLog.txt  evolve_test.xlsx
examples/best/model_eval_0.tf/: saved_model.pb
examples/best/model_eval_1.tf/: saved_model.pb
examples/best/model_eval_2.tf/: saved_model.pb
examples/best/model_eval_3.tf/: saved_model.pb
examples/best/model_eval_4.tf/: saved_model.pb
examples/best/model_eval_5.tf/: saved_model.pb
examples/best/model_eval_6.tf/: saved_model.pb
examples/best/model_eval_7.tf/: saved_model.pb
examples/best/model_eval_8.tf/: saved_model.pb
examples/best/model_eval_9.tf/: saved_model.pb
examples/eval/model_eval_0.tf/: saved_model.pb
models/best/model_eval_0.tf/: saved_model.pb
models/best/model_eval_1.tf/: saved_model.pb
models/best/model_eval_2.tf/: saved_model.pb
models/best/model_eval_3.tf/: saved_model.pb
models/best/model_eval_4.tf/: saved_model.pb
optevolver/: __init__.py
optevolver/generators/: FloatFunctions.py  IntFunctions.py  JackTorrance.py  TextTokenizer.py  __init__.py
optevolver/hyperparameter/: EnumeratedTypes.py  EvolutionaryOptimizer.py  ModelWriter.py  TF2OptimizationTest.py  TF2OptimizerTestBase.py  ValueAxis.py  __init__.py  defaultLog.txt  evolve_17-14_12-10-2019.xlsx
optevolver/util/: ExcelUtils.py  JsonUtils.py  __init__.py
(+88 files in other folders)
